# I-wanna-be-the-boshy

./: CMakeLists.txt  I-wanna-be-the-boshy - 捷徑.lnk  README.md  log.txt
Resources/Image/Background/: Map1.txt  Map10.txt  Map11.txt  Map2.txt  Map3_1.txt  Map3_2.txt  Map4_1.txt  Map4_2.txt  Map5.txt  Map6.txt
Resources/Image/Background/WORLD1/: Map10.txt  Map11.txt  Map12.txt  Map13.txt  Map6.txt  Map7.txt
Resources/Image/Background/world2/: Map1.txt  Map3.txt
Resources/Image/MapObject/: phase2trap1.txt  phase2trap2.txt
Resources/Map/: map0-1.tmx  map0-2.tmx
Resources/Map/Tileset/: Cloud.tsx  goodly-2x.tsx  mountain.tsx
include/: AnimatedCharacter.hpp  App.hpp  AppMembers.hpp  BackgroundImage.hpp  BgmManager.hpp  Boss1.hpp  Bullet.hpp  Character.hpp  CheckPoint.hpp  GameObjectHelper.hpp  JumpBoost.hpp  MapInfoLoader.hpp  Menu.hpp  PairHash.hpp  ParserBackground.hpp  Platform.hpp  ResourceManager.hpp  World.hpp  bear.hpp  enemy.hpp  fallingground.hpp  imgui.hpp
include/Boss1/: Boss1.hpp  BossInfoText.hpp  BulletTypeB.hpp  LightAttack.hpp
include/MapObject/: CheckPoint.hpp  JumpBoost.hpp  bird.hpp  fallingground.hpp  phase2trap.hpp  spider.hpp
src/: AnimatedCharacter.cpp  App.cpp  AppStart.cpp  AppUpdate.cpp  BgmManager.cpp  Bird.cpp  Bullet.cpp  Character.cpp  CheckPoint.cpp  Game.cpp  GameOverUI.cpp  MapInfoLoader.cpp  Menu.cpp  ParserBackground.cpp  PlayerManager.cpp  ResourceManager.cpp  World.cpp  bear.cpp  enemy.cpp  fallingground.cpp  imgui.cpp  phase2trap.cpp  spider.cpp
src/Boss1/: Boss1.cpp  BossInfoText.cpp  BulletTypeA.cpp  BulletTypeB.cpp  LightAttack.cpp
